syntax = "proto3";


option go_package = "genproto/";

package ecommerce;

message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  float price = 4;
  string image_url = 5;
  string created_at = 6;
  string updated_at = 7;
  string deleted_at = 8;
}

service ProductService {
  rpc CreateProduct (CreateProductRequest) returns (ProductEmpty);
  rpc GetProduct (GetProductRequest) returns (Product);
  rpc UpdateProduct (UpdateProductRequest) returns (ProductEmpty);
  rpc DeleteProduct (DeleteProductRequest) returns (ProductEmpty);
  rpc ListProducts (GetAllProductsRequest) returns (ProductList);
}

message GetProductRequest {
  string id = 1;
}

message CreateProductRequest{
    string name = 2;
    string description = 3;
    float price = 4;
    string image_url = 5;
}

message UpdateProductRequest{
    string id = 1;
    string name = 2;
    string description = 3;
    float price = 4;
    string image_url = 5;
    string updated_at = 8;
}


message DeleteProductRequest{
    string id = 1;
}


message GetAllProductsRequest{
    string name = 2;
    string description = 3;
    float price = 4;
    string image_url = 5;
}

message ProductList {
  repeated Product products = 1;
}

message ProductEmpty {}
